@see 1.10 at basecamp

--- a/chrome/locale/en-US/options.dtd
+++ b/chrome/locale/en-US/options.dtd
@@ -1,9 +1,10 @@
 <!ENTITY prefwindow.title "Memory Restart Preferences">
 <!ENTITY pane1.title "Memory Restart Preferences">
-<!ENTITY memorylimit.label "Firefox memory threshold (Mb)">
+<!ENTITY memorylimit.label "Firefox memory threshold (MB)">
 <!ENTITY colorabovelimit.label "Text color when memory is above threshold">
 <!ENTITY colorbelowlimit.label "Text color when memory is below threshold">
 <!ENTITY autorestart.label "Restart Firefox automatically?">
 <!ENTITY showprompt.label "Show prompt on manual restart?">
 <!ENTITY refreshinterval.label "Refresh interval (seconds)">
+<!ENTITY memorylimit.error "Minimum of 250MB is allowed">
 
