--- a/chrome/locale/en-US/options.dtd
+++ b/chrome/locale/en-US/options.dtd
@@ -8,4 +8,4 @@
 <!ENTITY refreshinterval.label "Refresh interval (seconds)">
 <!ENTITY memorylimit.error "Minimum of 250MB is allowed">
 <!ENTITY minimizememory.label "Minimize memory when threshold reached">
-
+<!ENTITY minimizememorytolerancepercent.label "Minimize tolerance &#37; (recommended 10)">
