--- a/README
+++ b/README
@@ -9,3 +9,6 @@ Deployment
 1. Update version in build.properties and install.rdf.
 2. Run ant.
 3. Upload dist\memoryrestart-${version}-fx.xpi to https://addons.mozilla.org/en-US/developers/addon/memory-restart/versions.
+
+Powered By
+[Config](http://www.configapp.com "Config") - Easy Configuration File Management
