--- a/README
+++ b/README
@@ -12,3 +12,5 @@ Deployment
 
 Powered By
 [Config](http://www.configapp.com) - Easy Configuration File Management
+
+This site was built using [GitHub Pages](https://pages.github.com/).
